--- a/packages/fast-x402/MANIFEST.in
+++ b/packages/fast-x402/MANIFEST.in
@@ -1,6 +1,8 @@
 include README.md
 include LICENSE
 include requirements.txt
+recursive-include fast_x402 *.py
+recursive-include fast_x402/shared *.py
 recursive-exclude tests *
 recursive-exclude examples *
 recursive-exclude * __pycache__
