--- a/packages/fast-x402/pyproject.toml
+++ b/packages/fast-x402/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "fast-x402"
-version = "1.0.0"
+version = "1.1.0"
 description = "Lightning-fast x402 payment integration for FastAPI and modern Python web frameworks"
 authors = ["x402 Team"]
 readme = "README.md"
@@ -26,7 +26,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
-fastapi = "^0.104.0"
+fastapi = ">=0.100.0"
 eth-account = "^0.10.0"
 web3 = "^6.11.0"
 pydantic = "^2.5.0"
