--- a/packages/x402-langchain/MANIFEST.in
+++ b/packages/x402-langchain/MANIFEST.in
@@ -1,6 +1,8 @@
 include README.md
 include LICENSE
 include requirements.txt
+recursive-include x402_langchain *.py
+recursive-include x402_langchain/shared *.py
 recursive-exclude tests *
 recursive-exclude examples *
 recursive-exclude * __pycache__
