--- a/packages/x402-langchain/pyproject.toml
+++ b/packages/x402-langchain/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "x402-langchain"
-version = "1.0.0"
+version = "1.1.0"
 description = "x402 payment integration for LangChain - Enable autonomous AI agent payments"
 authors = ["x402 Team"]
 readme = "README.md"
@@ -32,7 +32,7 @@ eth-account = "^0.10.0"
 web3 = "^6.11.0"
 httpx = "^0.25.0"
 pydantic = "^2.5.0"
-aiohttp = "^3.9.0"
+aiohttp = ">=3.8.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
